--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 :root{
   --color-primary: #BDF2D5;
-  --secondary-color:#4B5D67;
+  --color-secondary:purple;
   --color-tertiary:#FF06B7;
   --color-light:#3C2C3E;
 }
@@ -24,6 +24,7 @@ body{
   color: var(--color-light);
 }
 
+/* code for navbar */
 nav{
   position: fixed;
   width: 100%;
@@ -38,13 +39,15 @@ nav{
 nav .container{
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   position: relative;
   padding: 1.5rem 0;
 }
 
 nav .container img{
   width: 4.2rem;
+  height: 4.2rem;
+  border-radius: 50%;
 }
 
 nav .container ul{
@@ -58,10 +61,16 @@ nav .container ul li{
 
 a{
   color: #fff;
-  font-size: 0.9rem;
   text-decoration: none;
+  font-size: 1.2rem;
 }
 
+nav .container ul li a:hover{
+  background: purple;
+  border-radius: 5px;
+  }
+
+/* code for section */
 section{
   display: grid;
   place-items: center;
@@ -87,30 +96,51 @@ section .container h3{
   font-family: 'Lobster Two', cursive;
 }
 
-/* code for navbar */
-#nav{
+section .container p{
+  letter-spacing: 0.06rem;
+  font-size: 1rem;
+  line-height: 1.7;
+  font-weight: 300;
+  max-width: 40rem;
+  margin: 0 auto;
+  margin-bottom: 3rem;
+  color: white;
+}
+
+section .container a{
+  background: linear-gradient(
+    to right, 
+    var(--color-secondary),
+    var(--color-primary)
+  );
+
+  padding: 0.7rem 3rem;
+  margin: 0.4rem;
+  border-radius: 2rem;
+  position: relative;
+  transition: all 500ms ease-in-out;
+}
+
+
+
+section .container a::before{
+  content: "";
+  position: absolute;
   top: 0;
-  position: sticky;
-  display: flex;
-  justify-content: space-between;
-  z-index: 1;
-  padding: 1rem;
+  left: -0.5rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 2rem;
+  border-left: 5px solid var(--color-primary);
+  z-index: 0;
+  transition: all 300ms ease-in-out;
 }
 
-ul{
-  display: flex;
-  align-items: center;
-  list-style: none;
-}
 
-#nav ul li a {
-  color: #FF06B7;
-  padding: 0.75rem;
-  margin: 0 0.2rem;
+section .container a:hover{
+  background: linear-gradient(
+    to left,
+    var(--color-secondary),
+    var(--color-primary)
+  );
 }
-
-#nav ul li a:hover{
-background: #3C2C3E;
-border-radius: 5px;
-}
-
